[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepcelltypes-xgboost"
version = "0.1.0"
description = "XGBoost baseline with Optuna tuning for cell type classification"
requires-python = ">=3.11"
dependencies = [
    "deepcell-types",
    "xgboost",
    "click",
    "numpy",
    "pandas",
    "scikit-learn",
]

[project.optional-dependencies]
tuning = ["optuna"]
all = ["optuna", "wandb"]
